# Generative-AI-Python-2025-05

./: README.md  StreamLitRAG  accounts.txt  future.txt  main.py  plan.md  pyproject.toml  python_concepts.py  requirements.txt  simple_age.py  test.py  webinar.md
docs/: openai-agent-sdk.md  openai.md  streamlit.md
homework/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15-function-calling.txt  16-function-calling-practice.txt  17-agents.txt  18-vision.txt  19-fastapi.txt  2.txt  20-fastapi-practice.txt  21. openai-agent-sdk-mcp.txt  22-streamlit-intro.txt  4.txt  6.txt  7.txt  8.txt  9.txt
notes/: recap.txt
projects/: 1. streamlit + RAG.txt  2. streamlit + agent + tools.txt
samples/fastapi-demo/: accounts.txt  console-app.py  main.py  prompt_api.py
samples/functional-calling/: birzai_wiki.py  demo.ipynb  mem_gpt.py  memory.txt  search_ai.py
samples/google-ai/: google-ai-demo.py
samples/json-mode/: json_mode_applied.py  json_mode_demo.py
samples/jupyter-notebook/: rag-extended.ipynb  rag-extended_danske.ipynb  rag.ipynb  rag.py
samples/ollama/: ollama-langchain.py  ollama-vision.py
samples/openai-agents/: openai-agents-demo.py
samples/openai-demo/: joke.txt  openai-demo-write-file.py  openai-demo.py
samples/prompt-demo/: demo.txt
samples/python-demo/: guess_game_extended.py  python_concepts.py
samples/sql/: chatbot.py
samples/streamlit-demo/: streamlit-demo.py  streamlit-langchain.py  streamlit-rag-inmemory.py  streamlit-source.py
samples/vision/: vision_demo.py
webinar/: agenda.txt  webinar.md  webinar_summary.md  webinar_summary_lt.md
